# cppthings

./: CMakeLists.txt  README.md  movable_ptr.hpp
cmake_template/: CMakeLists.txt
include/cppthings/: boxed_ptr.hpp  class_impl.hpp  cloned_ptr.hpp  custom_ptr.hpp  defer.hpp  handle.hpp  iota_iter.hpp  macros.hpp  movable_ptr.hpp  number.hpp  registry.hpp  safe_iter.hpp  sfinae.hpp
test/: boxed_ptr.cpp  class_impl.cpp  cloned_ptr.cpp  custom_ptr.cpp  custom_ptr.cpp.autosave  defer.cpp  handle.cpp  registry.cpp  sfinae.cpp
